--- a/src/Presentation/SmartStore.Web/Themes/Flex/Content/shared/_modal-flex.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/Content/shared/_modal-flex.scss
@@ -4,7 +4,7 @@
 // TODO: (mc) rename file > _modal.scss
 // ------------------------------------
 
-.modal-backdrop.in {
+.modal-backdrop.show {
     opacity: 0.7;
 }
 
@@ -18,7 +18,7 @@
     transform: translate(0, -75px) scale(0.9, 0.9);
 }
 
-.modal.in .modal-dialog {
+.modal.show .modal-dialog {
     transform: translate(0, 0);
 }
 
@@ -43,6 +43,7 @@
         margin: 0;
         width: auto;
         height: auto;
+        max-width: none;
         left: 0;
         top: 0;
         bottom: 0;
