--- a/src/Presentation/SmartStore.Web/Views/Checkout/Confirm.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Checkout/Confirm.cshtml
@@ -57,10 +57,10 @@
                     <!-- Terms of service -->
                     @using (Html.BeginZoneContent("end", key: "terms-of-service-modal"))
                     {
-                        <div id="terms-of-service-modal" class="modal modal-flex hide fade" tabindex="-1">
+                        <div id="terms-of-service-modal" class="modal modal-flex fade" tabindex="-1">
                             <div class="modal-dialog" role="document">
                                 <div class="modal-content">
-                                    <div class="modal-body"></div>
+                                    <div class="modal-body p-0"></div>
                                     <div class="modal-footer">
                                         <button class="btn" data-dismiss="modal">@T("Common.Confirm")</button>
                                     </div>
