Theming: refactored MyAccount & implemented new menubar

--- a/src/Presentation/SmartStore.Web/Themes/Flex/Content/_menu.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/Content/_menu.scss
@@ -91,15 +91,7 @@ $ocm-selected-color:                    $brand-warning;
 
         &.selected:before,
         &.expanded:before {
-            content: ' ';
-            display: block;
-            position: absolute;
-            height: 100%;
-            left: 0;
-            top: 0;
-            bottom: 0;
-            width: 4px;
-            background: $ocm-selected-color;
+            @include active-list-item(5px, $ocm-selected-color);
         }
     }
    
