--- a/src/Presentation/SmartStore.Web/Views/Customer/Register.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Customer/Register.cshtml
@@ -1,12 +1,12 @@
-﻿@using SmartStore.Core;
+﻿@model RegisterModel
+
+@using SmartStore.Core;
 @using SmartStore.Core.Infrastructure;
 @using SmartStore.Core.Infrastructure.DependencyManagement;
-
-@model RegisterModel
 @using SmartStore.Web.Models.Customer;
+
 @{
     Layout = "_Layout";
-
     Html.AddTitleParts(T("PageTitle.Register").Text);
 }
 
