--- a/src/Presentation/SmartStore.Web/Views/Search/Search.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Search/Search.cshtml
@@ -23,12 +23,16 @@
 	}
 
 	Layout = "_Layout";
+
+	ViewBag.HideLeftCol = true; // ...on mobile
 }
 
 @if (Model.SearchResult.Facets.Count > 0)
 {
 	@section left {
-		@{ Html.RenderAction("Filters", new { model = Model }); }
+		@{ 
+			Html.RenderAction("Filters", new { model = Model });
+		}
 	}
 }
 
