--- a/src/Presentation/SmartStore.Web/Views/Customer/ChangePassword.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Customer/ChangePassword.cshtml
@@ -1,66 +1,58 @@
 ﻿@model ChangePasswordModel
+
 @using SmartStore.Web.Models.Customer;
+
 @{
-    Layout = "_Layout";
+	Html.AddTitleParts(T("PageTitle.Account").Text);
 
-    //title
-    Html.AddTitleParts(T("PageTitle.Account").Text);
-}
-
-@section left
-{
-    @{ Html.RenderPartial("MyAccountNavigation", Model.NavigationModel, new ViewDataDictionary()); }
+	Layout = "_MyAccount";
+	ViewBag.PageClassToken = "changepassword";
+	ViewBag.PageTitle = T("Account.ChangePassword").Text;
 }
 
 @using (Html.BeginForm("ChangePassword", "Customer", FormMethod.Post, new { @class = "form-horizontal" }))
 {
     @Html.AntiForgeryToken()
-    <div class="page account-page change-password-page">
 
-        <div class="page-title">
-            <h1>@T("Account.ChangePassword")</h1>
+	if (!ViewData.ModelState.IsValid)
+	{
+        @Html.ValidationSummary(true)
+    }
+
+    if (!String.IsNullOrEmpty(Model.Result))
+    {
+        <div class="alert alert-info">
+            @Model.Result
         </div>
+    }
 
-        <div class="page-body pt-4">
-            @if (!ViewData.ModelState.IsValid) {
-                @Html.ValidationSummary(true)
-            }
-            @if (!String.IsNullOrEmpty(Model.Result))
-            {
-                <div class="alert alert-info">
-                    @Model.Result
-                </div>
-            }
-
-            <div class="form-group row">
-                @Html.LabelFor(model => model.OldPassword, new { @class = "col-sm-4 form-control-label required", @for = "OldPassword" })
-                <div class="col-sm-8">
-                    @Html.TextBoxFor(model => model.OldPassword, new { @class = "form-control" })
-                    @Html.ValidationMessageFor(model => model.OldPassword, null, new { @class = "text-danger" })
-                </div>
-            </div>
-            <div class="form-group row">
-                @Html.LabelFor(model => model.NewPassword, new { @class = "col-sm-4 form-control-label required", @for = "NewPassword" })
-                <div class="col-sm-8">
-                    @Html.TextBoxFor(model => model.NewPassword, new { @class = "form-control" })
-                    @Html.ValidationMessageFor(model => model.NewPassword, null, new { @class = "text-danger" })
-                </div>
-            </div>
-            <div class="form-group row">
-                @Html.LabelFor(model => model.ConfirmNewPassword, new { @class = "col-sm-4 form-control-label required", @for = "ConfirmNewPassword" })
-                <div class="col-sm-8">
-                    @Html.TextBoxFor(model => model.ConfirmNewPassword, new { @class = "form-control" })
-                    @Html.ValidationMessageFor(model => model.ConfirmNewPassword, null, new { @class = "text-danger" })
-                </div>
-            </div>
-            <div class="form-group row">
-                <div class="col-sm-offset-4 col-sm-8">
-                    <button type="submit" class="btn btn-primary">
-                        <i class="fa fa-check"></i>
-                        @T("Account.ChangePassword.Button")
-                    </button>
-                </div>
-            </div>
+    <div class="form-group row">
+        @Html.LabelFor(model => model.OldPassword, new { @class = "col-sm-4 form-control-label required", @for = "OldPassword" })
+        <div class="col-sm-8">
+            @Html.TextBoxFor(model => model.OldPassword, new { @class = "form-control" })
+            @Html.ValidationMessageFor(model => model.OldPassword, null, new { @class = "text-danger" })
+        </div>
+    </div>
+    <div class="form-group row">
+        @Html.LabelFor(model => model.NewPassword, new { @class = "col-sm-4 form-control-label required", @for = "NewPassword" })
+        <div class="col-sm-8">
+            @Html.TextBoxFor(model => model.NewPassword, new { @class = "form-control" })
+            @Html.ValidationMessageFor(model => model.NewPassword, null, new { @class = "text-danger" })
+        </div>
+    </div>
+    <div class="form-group row">
+        @Html.LabelFor(model => model.ConfirmNewPassword, new { @class = "col-sm-4 form-control-label required", @for = "ConfirmNewPassword" })
+        <div class="col-sm-8">
+            @Html.TextBoxFor(model => model.ConfirmNewPassword, new { @class = "form-control" })
+            @Html.ValidationMessageFor(model => model.ConfirmNewPassword, null, new { @class = "text-danger" })
+        </div>
+    </div>
+    <div class="form-group row">
+        <div class="col-sm-offset-4 col-sm-8">
+            <button type="submit" class="btn btn-primary">
+                <i class="fa fa-check"></i>
+                @T("Account.ChangePassword.Button")
+            </button>
         </div>
     </div>
 }
