--- a/src/Presentation/SmartStore.Web/Views/Customer/ReturnRequests.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Customer/ReturnRequests.cshtml
@@ -1,58 +1,47 @@
 ﻿@model CustomerReturnRequestsModel
+
 @using SmartStore.Web.Models.Customer;
+
 @{
-    Layout = "_Layout";
+	Html.AddTitleParts(T("PageTitle.Account").Text);
 
-    Html.AddTitleParts(T("PageTitle.Account").Text);
+	Layout = "_MyAccount";
+	ViewBag.PageClassToken = "returnrequests";
+	ViewBag.PageTitle = T("Account.CustomerReturnRequests").Text;
 }
 
-@section left
+@foreach (var item in Model.Items)
 {
-    @{ Html.RenderPartial("MyAccountNavigation", Model.NavigationModel, new ViewDataDictionary()); }
-}
-
-<div class="page account-page return-request-list-page">
-    <div class="page-title">
-        <h1>@T("Account.MyAccount") - @T("Account.CustomerReturnRequests")</h1>
-    </div>
-
-    <div class="clear"></div>
-
-    <div class="page-body">
-        @foreach (var item in Model.Items)
-        {
-            <fieldset class="request-item">
-                <legend class="title">
-					@string.Format(T("Account.CustomerReturnRequests.Title").Text, item.Id, item.ReturnRequestStatus)
-				</legend>
-                <div class="info">
-                    <div class="product">
-                        @T("Account.CustomerReturnRequests.Item") 
-						<a href="@item.ProductUrl" title="@T("Products.Details")">@item.ProductName</a>
-                        x @item.Quantity
-                    </div>
-                    <div class="reason">
-                        @string.Format(T("Account.CustomerReturnRequests.Reason").Text, item.ReturnReason)
-                    </div>
-                    <div class="action">
-                        @string.Format(T("Account.CustomerReturnRequests.Action").Text, item.ReturnAction)
-                    </div>
-                    <div class="date">
-                        @string.Format(T("Account.CustomerReturnRequests.Date").Text, item.CreatedOn.ToString())
-                    </div>
-                    @if (!String.IsNullOrEmpty(item.Comments))
-                    {
-                        <div class="comments-label">
-                            @T("Account.CustomerReturnRequests.Comments")
-                        </div>
-                        <div class="comments">
-                            @Html.Raw(SmartStore.Core.Html.HtmlUtils.FormatText(item.Comments, false, true, false, false, false, false))
-                        </div>
-                    }
+    <fieldset class="request-item">
+        <legend class="title">
+			@string.Format(T("Account.CustomerReturnRequests.Title").Text, item.Id, item.ReturnRequestStatus)
+		</legend>
+        <div class="info">
+            <div class="product">
+                @T("Account.CustomerReturnRequests.Item") 
+				<a href="@item.ProductUrl" title="@T("Products.Details")">@item.ProductName</a>
+                x @item.Quantity
+            </div>
+            <div class="reason">
+                @string.Format(T("Account.CustomerReturnRequests.Reason").Text, item.ReturnReason)
+            </div>
+            <div class="action">
+                @string.Format(T("Account.CustomerReturnRequests.Action").Text, item.ReturnAction)
+            </div>
+            <div class="date">
+                @string.Format(T("Account.CustomerReturnRequests.Date").Text, item.CreatedOn.ToString())
+            </div>
+            @if (!String.IsNullOrEmpty(item.Comments))
+            {
+                <div class="comments-label">
+                    @T("Account.CustomerReturnRequests.Comments")
                 </div>
-            </fieldset>
+                <div class="comments">
+                    @Html.Raw(SmartStore.Core.Html.HtmlUtils.FormatText(item.Comments, false, true, false, false, false, false))
+                </div>
+            }
+        </div>
+    </fieldset>
 			
-            <div class="clear"></div>
-        }
-    </div>
-</div>
+    <div class="clear"></div>
+}
