--- a/src/Presentation/SmartStore.Web/Views/Customer/RewardPoints.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Customer/RewardPoints.cshtml
@@ -1,81 +1,72 @@
 ﻿@model CustomerRewardPointsModel
+
 @using SmartStore.Web.Models.Customer;
+
 @{
-    Layout = "_Layout";
+	Html.AddTitleParts(T("PageTitle.Account").Text);
 
-    //title
-    Html.AddTitleParts(T("PageTitle.Account").Text);
+	Layout = "_MyAccount";
+	ViewBag.PageClassToken = "rewardpoints";
+	ViewBag.PageTitle = T("Account.RewardPoints").Text;
 }
 
-@section left
-{
-    @{ Html.RenderPartial("MyAccountNavigation", Model.NavigationModel, new ViewDataDictionary()); }
-}
+<div class="alert alert-info">
+    @Model.RewardPointsBalance
+</div>
 
-<div class="page account-page reward-points-page">
-
-    <div class="page-title">
-        <h1>@T("Account.RewardPoints")</h1>
+<div class="block">
+    <div class="block-title">
+        @T("RewardPoints.History")
     </div>
-
-    <div class="page-body">
-        <div class="reward-points-overview">
-            @Model.RewardPointsBalance
-        </div>
-
-        <div class="block">
-            <div class="block-title">
-                @T("RewardPoints.History")
-            </div>
-            <div class="block-body">
-                <div class="reward-points-history">
-                    @if (Model.RewardPoints.Count > 0)
-                    {
-                        <table class="table table-striped table-hover">
-                            <thead>
-                                <tr>
-                                    <th>
-                                        @T("Common.CreatedOn")
-                                    </th>
-                                    <th>
-                                        @T("RewardPoints.Fields.Points")
-                                    </th>
-                                    <th>
-                                        @T("RewardPoints.Fields.PointsBalance")
-                                    </th>
-                                    <th>
-                                        @T("RewardPoints.Fields.Message")
-                                    </th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                @for (int i = 0; i < Model.RewardPoints.Count; i++)
-                                {
-                                    var item = Model.RewardPoints[i];
-                                    <tr>
-                                        <td>
-                                            @item.CreatedOn
-                                        </td>
-                                        <td>
-                                            @item.Points
-                                        </td>
-                                        <td>
-                                            @item.PointsBalance
-                                        </td>
-                                        <td>
-                                            @item.Message
-                                        </td>
-                                    </tr>
-                                }
-                            </tbody>
-                        </table>
-                    }
-                    else
-                    {
-                        @T("RewardPoints.NoHistory")
-                    }
-                </div>
-            </div>
+    <div class="block-body">
+        <div class="reward-points-history">
+            @if (Model.RewardPoints.Count > 0)
+            {
+                <table class="table table-striped table-hover">
+                    <thead>
+                        <tr>
+                            <th>
+                                @T("Common.CreatedOn")
+                            </th>
+                            <th>
+                                @T("RewardPoints.Fields.Points")
+                            </th>
+                            <th>
+                                @T("RewardPoints.Fields.PointsBalance")
+                            </th>
+                            <th>
+                                @T("RewardPoints.Fields.Message")
+                            </th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @for (int i = 0; i < Model.RewardPoints.Count; i++)
+                        {
+                            var item = Model.RewardPoints[i];
+                            <tr>
+                                <td>
+                                    @item.CreatedOn
+                                </td>
+                                <td>
+                                    @item.Points
+                                </td>
+                                <td>
+                                    @item.PointsBalance
+                                </td>
+                                <td>
+                                    @item.Message
+                                </td>
+                            </tr>
+                        }
+                    </tbody>
+                </table>
+            }
+            else
+            {
+                <div class="alert alert-warning">
+					@T("RewardPoints.NoHistory")
+				</div>
+            }
         </div>
     </div>
 </div>
