--- a/src/Presentation/SmartStore.Web/Themes/Flex/Content/_cart.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/Content/_cart.scss
@@ -42,9 +42,11 @@
         right: 0;
         bottom: 0;
 
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
+        &.active {
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+        }
 
         > * { width: 100%; z-index: 1; }
     }
@@ -52,6 +54,10 @@
     .price {
         white-space: nowrap;
         font-weight: 600;
+    }
+
+    .throbber {
+        background-color: #fff;
     }
 }
 
