--- a/src/Presentation/SmartStore.Web/Views/Product/Partials/Product.Tabs.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Product/Partials/Product.Tabs.cshtml
@@ -59,9 +59,8 @@
 }}
 
 @helper TabContentHeader() {{
-	<a href="javascript:void()" class="btn btn-secondary btn-flat btn-lg offcanvas-closer">
-		<i class="fa fa-chevron-left"></i>
-		<span>@T("Common.Close")</span>
+	<a href="javascript:void()" class="btn btn-success btn-no-border btn-icon offcanvas-closer rounded-0" title="@T("Common.Close")">
+		<i class="fa fa-2x fa-lg fa-angle-left"></i>
 	</a>
 }}
 
