--- a/src/Presentation/SmartStore.Web/Themes/Flex/Content/shared/_offcanvas.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/Content/shared/_offcanvas.scss
@@ -15,28 +15,12 @@ $offcanvas-z-index:                 99999;
 /* PARENT CANVAS
 --------------------------------------------*/
 
-/*html, body {
-    height: 100%;
-}
-
-#page {
-    overflow: auto;
-}*/
-
 .canvas-slidable {
     z-index: 0;
     transform: translate3d(0, 0, 0);
     transition: opacity $offcanvas-duration $offcanvas-easing,
                 transform $offcanvas-duration $offcanvas-easing;
 
-    /*overflow: auto;*/
-
-    /*body.canvas-sliding & {
-        overflow: hidden; 
-    }
-    body.canvas-slid &{
-    }
-    */
     .canvas-sliding-left &                          { transform: translate3d($offcanvas-width * -1, 0, 0); }
     .canvas-sliding-left.canvas-lg &                { transform: translate3d($offcanvas-width-lg * -1, 0, 0); }
     .canvas-sliding-left.canvas-fullscreen &        { transform: translate3d(-100%, 0, 0); }
@@ -171,7 +155,7 @@ body.canvas-blocking .canvas-blocker {
     position: absolute;
     width: 100%;
     height: 100%;
-    overflow: hidden;
+    //overflow: hidden;
     -webkit-overflow-scrolling: touch;
 }
 
@@ -182,18 +166,12 @@ body.canvas-blocking .canvas-blocker {
     -webkit-overflow-scrolling: touch;
 }
 
-.offcanvas-shim {
-    width: 1px;
-    min-height: 101vh;
-}
-
 
 /* OFFCANVAS TABS
 --------------------------------------------*/
 .offcanvas-tabs {
     position: relative;
     flex-grow: 0;
-
     padding: 0 5%;
 
     .offcanvas-closer {
