--- a/src/Presentation/SmartStore.Web/Views/Shared/Partials/Product.List.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Shared/Partials/Product.List.cshtml
@@ -93,7 +93,10 @@
 	</div>
 }
 
-@{ Html.RenderAction("ActiveFilters", "Search", new { area = "" }); }
+@if (Model.AllowFiltering)
+{
+	Html.RenderAction("ActiveFilters", "Search", new { area = "" });
+}
 
 @if (Model.PagedList.TotalCount > 0)
 {
