Theming: enhanced .artlist styling & added new .heading component

--- a/src/Presentation/SmartStore.Web/Themes/Flex/Content/_artlist.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/Content/_artlist.scss
@@ -649,3 +649,16 @@ $art-active-border-color:       rgba(0,0,0, 0.2);
         //width: 180px; // avoids flickering during initial load
     }
 }
+
+
+// Special overrides
+// ---------------------------------------------
+
+.artlist-no-separators .artlist-grid:not(.artlist-boxed) {
+    .art {
+        border-bottom-width: 0 !important;
+    }
+    &:after {
+        height: 0 !important;
+    }
+}
