--- a/src/Presentation/SmartStore.Web/Views/Catalog/CategoryTemplate.ProductsInGridOrLines.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/CategoryTemplate.ProductsInGridOrLines.cshtml
@@ -33,7 +33,7 @@
 
 @helper SubCategoryList()
 {
-	<div class="artlist artlist-grid artlist-4-cols artlist-boxed artlist-sub-categories">
+	<div class="artlist artlist-grid artlist-4-cols artlist-boxed artlist-sub-categories@(Model.SubCategoryDisplayType == SubCategoryDisplayType.AboveProductList ? " hide-on-active-filter" : "")">
 		@foreach (var item in Model.SubCategories)
 		{
 			var picture = item.PictureModel;
@@ -81,7 +81,7 @@
         @* Description *@
         @if (!String.IsNullOrWhiteSpace(Model.Description))
         {
-            <div class="category-description text-body">
+            <div class="category-description text-body hide-on-active-filter">
                 @Html.Raw(Html.CollapsedText(Model.Description))
             </div>
         }
@@ -98,13 +98,15 @@
         {
             Html.RenderWidget("categorydetails_before_featured_products");
 
-			<div class="featured-product-grid">
-                <div class="section-title">
-                    @T("Products.FeaturedProducts")
+			<div class="product-grid featured-product-grid block hide-on-active-filter">
+                <div class="heading heading-center">
+                    <h3 class="heading-title fs-h1">@T("Products.FeaturedProducts")</h3>
                 </div>
-				@{ 
-                    Html.RenderPartial("Product.List", Model.FeaturedProducts);
-				}
+				<div class="block-body pt-3 artlist-no-separators">
+					@{
+						Html.RenderPartial("Product.List", Model.FeaturedProducts);
+					}
+				</div>
             </div>
         }
 
