--- a/src/Presentation/SmartStore.Web/Views/Catalog/Partials/HomepageBestSellers.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/Partials/HomepageBestSellers.cshtml
@@ -10,11 +10,10 @@
 }
 
 <div class="product-grid bestsellers block">
-    <div class="block-title">
-        <h3>@T("Bestsellers")</h3>
-    </div>
-
-    <div class="block-body">
+	<div class="heading heading-center">
+		<h3 class="heading-title fs-h1">@T("Bestsellers")</h3>
+	</div>
+    <div class="block-body pt-3 artlist-no-separators">
 		@{
 			Html.RenderPartial("Product.List", Model);
 		}
