--- a/src/Presentation/SmartStore.Web/Views/Catalog/Partials/HomepageProducts.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/Partials/HomepageProducts.cshtml
@@ -9,11 +9,11 @@
 }
 
 <div class="product-grid home-page-product-grid block">
-    <div class="block-title">
-        <h3>@T("HomePage.Products")</h3>
-    </div>
+	<div class="heading heading-center">
+		<h3 class="heading-title fs-h1">@T("HomePage.Products")</h3>
+	</div>
 
-    <div class="block-body">
+    <div class="block-body pt-3 artlist-no-separators">
 		@{ 
 			Html.RenderPartial("Product.List", Model);
 		}
