Fixed installation issue (installation would proceed due to a javascript error)

--- a/src/Presentation/SmartStore.Web/Views/Common/Partials/AccountDropdown.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Common/Partials/AccountDropdown.cshtml
@@ -17,7 +17,7 @@
 
 @if (Model.IsAuthenticated)
 {
-    <div class="dropdown-menu dropdown-menu-right shopbar-flyout-container">
+    <div class="dropdown-menu dropdown-menu-right">
         
         @{ Html.RenderWidget("account_dropdown_before"); }
 
